updated performance feedback